--- a/src/permutation_test_results_maximum.Rmd
+++ b/src/permutation_test_results_maximum.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Permutation test"
+title: "Maximum cross-correlation values"
 author: "Letitia Ho"
 date: "10/30/2020"
 output: html_document
