Update name of function source file within scripts

--- a/src/plot_shuffles_lag.Rmd
+++ b/src/plot_shuffles_lag.Rmd
@@ -16,6 +16,7 @@ library("stringr")
 
 ```{r load_data, include=FALSE}
 setwd("/Users/letitiaho/src/talker_change_data_processing")
+source("src/plot_shuffles_functions.R")
 original <- read.csv('data/aggregate/lag.csv')
 shuffled <- read.csv('data/aggregate/shuffled_lag.csv')
 ```
