--- a/src/plot_shuffles_maximum.Rmd
+++ b/src/plot_shuffles_maximum.Rmd
@@ -7,6 +7,7 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, fig.width=12, fig.height=2)
+knitr::opts_knit$set(root.dir = "/Users/letitiaho/src/talker_change_data_processing")
 library("dplyr")
 library("ggplot2")
 library("ggpubr")
