Update to run rms from within another matlab file and to combine all rms values without reading out from a written file. still writing rms data to individual files, but now saving to tmp/

--- a/src/5_rms/models.Rmd
+++ b/src/5_rms/models.Rmd
@@ -16,7 +16,8 @@ library("kableExtra")
 
 ```{r load_data, include=FALSE}
 source("src/tools/functions.R")
+old_xcorr <- read.csv('data/5_rms/maximumcopy.csv')
 xcorr <- read.csv('data/5_rms/maximum.csv')
-rms <- read.csv('data/5_rms/rms.csv')
+# rms <- read.csv('data/5_rms/rms.csv')
 ```
 
