--- a/src/5_rms/compile_model_stats.Rmd
+++ b/src/5_rms/compile_model_stats.Rmd
@@ -18,27 +18,33 @@ models <- dir(path = "data/5_rms/models")
 channel_numbers <- as.numeric(parse_number(models))
 ```
 
-
+**Create data frames containing params of all models**
 ```{r}
-means <- c()
-sds <- c()
+# Loop over and load each model and add params to a data frame
+means <- data.frame()
+sds <- data.frame()
 for (i in 1:128) {
   
   # Load the model
   load(file = file.path("data/5_rms/models", models[i]))
   
-  # Compile stats into a data frame
+  # Horizontally concat into a data frame
   params <- precis(model, depth = 2)
   means <- rbind(means, params$mean)
   sds <- rbind(sds, params$sd)
 }
 
+# Clean up data frame
 colnames(means) <- rownames(params)
 colnames(sds) <- rownames(params)
-means$channel <- channel_numbers
-sds$channel <- channel_numbers
-  
-# z-test on distributions for b_same and b_different
-  
+means$channel_number <- channel_numbers
+means <- arrange(means, channel_number)
+sds$channel_number <- channel_numbers
+sds <- arrange(sds, channel_number)
+```
+
+**Z-tests between 
+```{r}
+
 ```
 
